--- a/BTL/Site.Master
+++ b/BTL/Site.Master
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <asp:LinkButton ID="LinkButtonRead" class="nav-link" runat="server" OnClick="LinkButtonRead_Click">Read</asp:LinkButton>
                         </li>
+                        <li class="nav-item">
+                            <asp:LinkButton ID="LinkButtonUpload" class="nav-link" runat="server" OnClick="LinkButtonUpload_Click">Upload</asp:LinkButton>
+                        </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
